feat: enhance layout with sidebar and modal, add chat icon, and update styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,27 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
+  --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
+  @keyframes shimmer-slide {
+  to {
+    transform: translate(calc(100cqw - 100%), 0);
+    }
+  }
+  @keyframes spin-around {
+  0% {
+    transform: translateZ(0) rotate(0);
+    }
+  15%, 35% {
+    transform: translateZ(0) rotate(90deg);
+    }
+  65%, 85% {
+    transform: translateZ(0) rotate(270deg);
+    }
+  100% {
+    transform: translateZ(0) rotate(360deg);
+    }
+  }
 }
 
 :root {
@@ -132,7 +153,7 @@
 
 @layer base {
   :root {
-    --sidebar-background: 0 100% 50%;
+    --sidebar-background: 0 80% 50%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
@@ -143,7 +164,7 @@
   }
 
   .dark {
-    --sidebar-background: 0 100% 50%;
+    --sidebar-background: 0 80% 50%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
@@ -153,4 +174,3 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
-
